Change Layout and service for allocation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: allocation_app
-description: Allocation UI assignment (BLoC + mock data) - Page 1 scaffold.
+description: Salmon Stock Allocation UI assignment
 publish_to: "none"
 version: 1.0.0+1
 
