--- a/.github/workflows/vercel_deploy.yaml
+++ b/.github/workflows/vercel_deploy.yaml
@@ -2,12 +2,11 @@ name: Deploy to Vercel
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -19,20 +18,24 @@ jobs:
       - name: Add pub cache to PATH
         run: echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
 
-      - name: Install Flutter
+      - name: Install Flutter via FVM
         run: |
           fvm install 3.29.3
           fvm use 3.29.3
 
-      - name: Build web
+      - name: Build Flutter Web
         run: |
           fvm flutter pub get
           fvm flutter build web --release
 
       - name: Deploy to Vercel
         run: |
-          npm install -g vercel
-          vercel deploy --prod \
+          npm i -g vercel
+          vercel pull --yes --environment=production \
             --token=${{ secrets.VERCEL_TOKEN }} \
-            --org=${{ secrets.VERCEL_ORG_ID }} \
-            --project=${{ secrets.VERCEL_PROJECT_ID }}
+            --scope=${{ secrets.VERCEL_ORG_ID }}
+
+          # Deploy the already-built static site
+          vercel deploy build/web --prod \
+            --token=${{ secrets.VERCEL_TOKEN }} \
+            --scope=${{ secrets.VERCEL_ORG_ID }}
